--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ Project Name: PSD 2 HTML
 Project Type: PSD to HTML RESPONSIVE
 Author: MD. Mostofa kamal
 Email: raselrostock@yahoo.com
+updatefff
 *******************************************/
 *{
     font-family: Trebuchet MS;
