--- a/style.css
+++ b/style.css
@@ -3,6 +3,8 @@ Project Name: PSD 2 HTML
 Project Type: PSD to HTML RESPONSIVE
 Author: MD. Mostofa kamal
 Email: raselrostock@yahoo.com
+Update:second version
+
 *******************************************/
 *{
     font-family: Trebuchet MS;
